k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url : "true"
  labels:
    project: shortcut-k8s-application
    app: ingress
    env: dev
spec:
  ingressClassName: nginx
  rules:
    - host: users.shortcut.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: users-app-service
                port:
                  number: 8080
